style: hide delete, overflow, fix: duplicate items

--- a/src/components/component-css/todo.css
+++ b/src/components/component-css/todo.css
@@ -5,6 +5,7 @@
   padding: 2rem;
   border-radius: 10px;
   width: 18ch;
+  max-height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,6 +29,13 @@
   display: flex;
   flex-direction: column;
   margin: 2rem 0;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.list-display::-webkit-scrollbar {
+  display: none;
 }
 
 .list-display label {
